--- a/Rosalyn.cabal
+++ b/Rosalyn.cabal
@@ -31,7 +31,7 @@ library
 executable Rosalyn-exe
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , Rosalyn
   default-language:    Haskell2010
@@ -42,7 +42,7 @@ test-suite Rosalyn-test
   main-is:             Spec.hs
   build-depends:       base
                      , Rosalyn
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
 source-repository head
