Added functionality for additive distance matrix creation.

--- a/Rosalyn.cabal
+++ b/Rosalyn.cabal
@@ -28,6 +28,7 @@ library
     containers, array, bytestring,
     biocore, bioalign,
     edit-distance
+    --bed-and-breakfast
     --hmm
     --QuickCheck--, QuickSpec
     --pads,
