--- a/Rosalyn.cabal
+++ b/Rosalyn.cabal
@@ -25,7 +25,7 @@ library
   build-depends:       base >= 4.7 && < 5,
     hashable, directory, process,
     random,
-    containers, array, bytestring,
+    containers, array, bytestring, ListLike,
     biocore, bioalign,
     edit-distance
     --bed-and-breakfast
